add img, description etc.

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,8 @@
+title: Atelier numérique - vDHd 2021
+logo: /img/Ticket_MWS_mini.jpg
+description: Alle Informationen zum Hackathon des DFK Paris am 25/06/2021
 theme: jekyll-theme-minimal
 baseurl: /atelier_numerique
-title: "Atelier numérique - vDHd 2021"
-description: "Alle Informationen zum Hackathon des DFK Paris am 25/06/2021"
+
 
 
