change jpg to png

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Atelier numérique - vDHd 2021
-logo: /img/Ticket_MWS_mini.jpg
+logo: /img/Ticket_MWS_mini.png
 description: Alle Informationen zum Hackathon des DFK Paris am 25/06/2021
 theme: jekyll-theme-minimal
 baseurl: /atelier_numerique
